--- a/todo.css
+++ b/todo.css
@@ -10,8 +10,8 @@ h1{
     margin: auto;
     position: relative;
     overflow: hidden;
-    width: 350px;
-    height: 60px;
+    width: 40%;
+    height: 8vh;
     display: flex;
     align-items: center;
     justify-content: center;
